--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   firebase_auth: ^0.11.1
   google_sign_in: ^4.0.2
   font_awesome_flutter: ^8.2.0
-  transparent_image: ^1.0.0
+  flutter_spinkit: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
