--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_sign_in: ^4.0.2
   font_awesome_flutter: ^8.2.0
   flutter_spinkit: ^4.0.0
+  image_fade: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
