--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   font_awesome_flutter: ^8.2.0
   flutter_spinkit: ^4.0.0
   image_fade: ^0.2.1
+  transparent_image: ^0.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
