--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   font_awesome_flutter: ^8.2.0
   flutter_spinkit: ^4.0.0
   image_fade: ^0.2.1
-  transparent_image: ^0.1.0
+  liquid_progress_indicator: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
